
    - Fix for Bug#56099 - Added support for JDBC4-specific functionality when using load-balanced connections.


06-24-10 - Version 5.1.13

   - Minor fix in previous patch for Bug#51904. Function ConnectionImpl.setCatalog() was passed quoted argument thus breaking with "...for the right syntax to use near 'test``'"
	  
    - Fix for Bug#51912 - Passing NULL as cat. param to getProcedureColumns with !nullCatalogMeansCurrent
	
    - Fix for Bug#52167 - Can't parse parameter list with special characters inside
	
    - Fix for Bug#51904 - getProcedureColumns() always returns PROCEDURE_CAT result column as NULL
	
    - Fix for Bug#51712 - Display Size is always 0 for columns returned by getProcedureColumns()

    - Fix for Bug#51908 - db variable might have end up unassigned when calling
      getProcedureColumns()/Functions(). This is a followup on code changes made
      for Bug#51022.
    
    - Fixed Bug#51266 - jdbc:mysql:loadbalance:// would stick to the first
      host in the list in some cases, especially exacerbated if the host was
      down.
      
    - Replaced URLs of the form jdbc:mysql://host-1,host-2 with a composite of
      a normal connection and a jdbc:mysql:loadbalance:// connection for more 
      robustness and cleaner code.
      
    - Fixed BUG#51643 - Connections using jdbc:mysql:loadbalance:// would 
      have statements (and prepared statements) that did not have their connections
      changed upon commit()/rollback(), and thus applications that held statement
      instances past commit()/rollback() could have data written to or read from
      un-intended connections.
      
    - Fixed BUG#51666 - StatementInterceptors were never "un-safed" after connection 
      establishment, causing interceptors which returned result sets pre/post execution
      would not work.
      
    - Fixed BUG#51783 - Load-balanced connections could throw a SQLException